[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = "My attempt on Advent of Code 2023"
authors = ["Mart Clanor <mart.dayniel.clanor@witteveenbos.com>"]
readme = "README.md"
packages = [{include = "aoc_2023"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.2"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
scikit-image = "^0.22.0"
pandas = "^2.1.4"
scikit-spatial = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ipykernel = "^6.27.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
